--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Additional
+.DS_Store
+secret.env
+supervisely
+sly_project
+data
+runs
+tensorboard_runs
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
