Text inference was added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,20 +2,8 @@
   "python.defaultInterpreterPath": ".venv/bin/python",
   "files.exclude": {
     "**/__pycache__": true,
-    ".venv": true,
+    ".venv": true
   },
-  "black-formatter.args": [
-    "--line-length",
-    "100"
-  ],
-  "black-formatter.showNotification": "off",
-  "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter",
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": false,
-    "editor.formatOnType": true,
-  },
-  "python.formatting.provider": "none",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": false,
   "editor.formatOnType": true,
@@ -25,4 +13,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "python.formatting.provider": "black",
+  "debug.inlineValues": "off",
 }
