--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,7 @@ supervisely==6.69.68
 
 # For CLIP:
 torch>=1.10.2
-git+https://github.com/openai/CLIP.git
-ml_collections
-clu
-tensorflow-macos
-tensorflow-datasets
-scikit-image
-bokeh
-matplotlib
-# optax @ git+https://github.com/deepmind/optax.git@master"
-
-# COCO and LVIS API for evaluation:
-# git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI
-# lvis
-
-# To import Sinkhorn matcher:
-jax
-ott-jax==0.2.0
+transformers[torch]
 
 # # code formatter
 black
