--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,18 @@ supervisely==6.70.17
 
 # For CLIP:
 torch>=1.10.2
-torchvision
-transformers[torch]
+git+https://github.com/openai/CLIP.git
+ml_collections
+clu
+tensorflow
+tensorflow-datasets
+scikit-image
+bokeh
+matplotlib
+
+# To import Sinkhorn matcher:
+jax
+ott-jax==0.2.0
 
 # # code formatter
 black
