--- a/config.json
+++ b/config.json
@@ -13,12 +13,13 @@
   "entrypoint": "python -m uvicorn src.main:app --host 0.0.0.0 --port 8000",
   "port": 8000,
   "context_menu": {
-    "target": ["images_project"],
+    "target": ["images_project", "images_dataset"],
     "context_root": "Neural Networks"
   },
   "task_location": "workspace_tasks",
   "need_gpu": true,
   "community_agent": false,
   "release": { "version":"v1.0.0", "name":"init" },
-  "slug": "supervisely-ecosystem/owl-vit-app"
+  "slug": "supervisely-ecosystem/owl-vit-app",
+  "docker_image": "supervisely/owl-vit:1.0.0-ruslan"
 }
