--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,4 +11,5 @@ WORKDIR /scenic
 RUN git checkout 01b082706e7304e699baaa1bf4d15dcbf4d52de2
 RUN python3 -m pip install -vq .
 WORKDIR /
+COPY ../requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
