--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,7 +3,9 @@ services:
   owl-vit-app:
     shm_size: '8gb'
     runtime: nvidia
+    image: supervisely/owl-vit:1.0.1-ruslan
     build:
-      context: .
+      context: ..
+      dockerfile: ./docker/Dockerfile
       args:
         IMAGE: supervisely/owl-vit:1.0.0-ruslan
