Buttons layout fixed.

--- a/config.json
+++ b/config.json
@@ -16,8 +16,8 @@
     "context_root": "Neural Networks"
   },
   "task_location": "workspace_tasks",
-  "need_gpu": true,
-  "community_agent": false,
+  "need_gpu": false,
+  "community_agent": true,
   "icon": "https://user-images.githubusercontent.com/115161827/230065661-6ad4a9e0-20bf-452a-b3bd-10646436e335.png",
   "icon_cover": true,
   "poster": "https://user-images.githubusercontent.com/115161827/230065782-f033aa7d-6acc-405b-89e3-81330bb66bbb.png",
