--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "neural network",
     "object detection",
     "interactive detection",
+    "inference interfaces",
     "images"
   ],
   "entrypoint": "python -m uvicorn src.main:app --host 0.0.0.0 --port 8000",
