--- a/config.json
+++ b/config.json
@@ -24,5 +24,5 @@
   "poster": "https://user-images.githubusercontent.com/115161827/230065782-f033aa7d-6acc-405b-89e3-81330bb66bbb.png",
   "release": { "version":"v1.0.0", "name":"init" },
   "slug": "supervisely-ecosystem/owl-vit-app",
-  "docker_image": "supervisely/owl-vit:1.0.0-ruslan"
+  "docker_image": "supervisely/base-py-sdk:6.72.42"
 }
