Update docker image in config.json to supervisely/base-py-sdk:6.73.45

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "type": "app",
   "version": "2.0.0",
   "description": "Class-angnostic object detection model",
-  "docker_image": "supervisely/base-py-sdk:6.73.22",
+  "docker_image": "supervisely/base-py-sdk:6.73.45",
   "categories": [
     "neural network",
     "object detection",
@@ -14,7 +14,10 @@
   "entrypoint": "python -m uvicorn src.main:app --host 0.0.0.0 --port 8000",
   "port": 8000,
   "context_menu": {
-    "target": ["images_project", "images_dataset"],
+    "target": [
+      "images_project",
+      "images_dataset"
+    ],
     "context_root": "Neural Networks"
   },
   "task_location": "workspace_tasks",
@@ -23,6 +26,10 @@
   "icon": "https://user-images.githubusercontent.com/115161827/230065661-6ad4a9e0-20bf-452a-b3bd-10646436e335.png",
   "icon_cover": true,
   "poster": "https://user-images.githubusercontent.com/115161827/230065782-f033aa7d-6acc-405b-89e3-81330bb66bbb.png",
-  "release": { "version":"v1.0.0", "name":"init" },
-  "slug": "supervisely-ecosystem/owl-vit-app"
+  "release": {
+    "version": "v1.0.0",
+    "name": "init"
+  },
+  "slug": "supervisely-ecosystem/owl-vit-app",
+  "min_instance_version": "6.8.88"
 }
