--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,30 @@
 {
-  "python.defaultInterpreterPath": ".venv/bin/python",
-  "files.exclude": {
-    "**/__pycache__": true,
-    ".venv": true
-  },
-  "editor.formatOnSave": false,
-  "editor.formatOnPaste": false,
-  "editor.formatOnType": false,
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "python.formatting.provider": "black",
-  "debug.inlineValues": "off",
+	"files.exclude": {
+		"**/__pycache__": true,
+		"build": true,
+		"supervisely.egg-info": true,
+		".venv": true
+	},
+	"python.defaultInterpreterPath": ".venv/bin/python",
+	"editor.formatOnSave": true,
+	"editor.formatOnPaste": true,
+	"editor.formatOnType": true,
+	"black-formatter.args": ["--line-length", "100"],
+	"[html]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[json]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[python]": {
+		"editor.defaultFormatter": "ms-python.black-formatter"
+	},
+	"debug.inlineValues": "off",
+	"python.analysis.typeCheckingMode": "off",
+	"python.analysis.autoImportCompletions": false,
+	"autoDocstring.docstringFormat": "sphinx",
+	"autoDocstring.customTemplatePath": "docs/.mustache",
+	"python.testing.pytestArgs": ["tests/inference_cache"],
+	"python.testing.unittestEnabled": false,
+	"python.testing.pytestEnabled": true
 }
