--- a/local.env
+++ b/local.env
@@ -1,5 +1,5 @@
-TEAM_ID = 4 # * Required! Paste your team id here: https://dev.supervise.ly/teams/my
-WORKSPACE_ID = 3 # * Required! Paste your workspace id here: https://dev.supervise.ly/workspaces/
-PROJECT_ID = 243 # * Optional. Paste your project id here if needed: https://dev.supervise.ly/projects/
-# DATASET_ID = 66406 # * Optional. Paste your dataset id here if needed: https://dev.supervise.ly/projects/<project_id>/datasets/
+TEAM_ID = 9 # * Required! Paste your team id here: https://dev.supervise.ly/teams/my
+WORKSPACE_ID = 8 # * Required! Paste your workspace id here: https://dev.supervise.ly/workspaces/
+PROJECT_ID = 64 # * Optional. Paste your project id here if needed: https://dev.supervise.ly/projects/
+# DATASET_ID =  # * Optional. Paste your dataset id here if needed: https://dev.supervise.ly/projects/<project_id>/datasets/
 # SLY_APP_DATA_DIR = "/users/iwatkot/tmp" # * Optional. Path to the local folder for application data. Make sure the app will have rights to read/write from/to this folder.
